Designed tic tac toe board and fixed alignment issues

--- a/tictax/tictax.api/wwwroot/css/authStyle.css
+++ b/tictax/tictax.api/wwwroot/css/authStyle.css
@@ -3,10 +3,20 @@ html {
     margin: 0;
     padding: 0;
     background-color: white;
+    height: 100%;
 }
 
 * {
     box-sizing: border-box;
+}
+
+.flex-fill {
+    flex: 1 1 auto;
+}
+
+.row {
+    margin-left: 0;
+    margin-right: 0;
 }
 
 .alert {
@@ -18,7 +28,7 @@ html {
     border: none;
     margin: 0 auto;
     float: none;
-    margin-bottom: 10px;
+    /* margin-bottom: 10px; */
 }
 
 .btr {
